--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>mail e dadi</title>
+
+    <!-- link css di bootstrap -->
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.css' 
+    integrity='sha512-r0fo0kMK8myZfuKWk9b6yY8azUnHCPhgNz/uWDl2rtMdWJlk7gmd9socvGZdZzICwAkMgfTkVrplDahQ07Gi0A==' crossorigin='anonymous'/>
 
     <!-- link css -->
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
+    <div class="bg-success m-3 p-3">
+        <div class="bg-warning player1 d-inline p-1 m-3">Player</div>
+        <div class="bg-warning player2 d-inline p-1">Computer</div>
+        <button id="button" class=" d-block btn btn-primary m-3" >gioca</button>
+        <div class="result1 text-light m-3"></div>
+        <div class="result2 text-light m-3"></div>
+        <div class="result3 text-light m-3"></div>
+    </div>
+
+
+    <!-- link javascript di bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
     <!-- link javascript -->
     <script src="./assets/main.js"></script>
 </body>
