--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 </head>
 <body>
     <div class="bg-success m-3 p-3">
-        <div class="bg-warning player1 d-inline p-1 m-3">Player</div>
-        <div class="bg-warning player2 d-inline p-1">Computer</div>
+        <div class=" rounded bg-warning player1 d-inline p-1 m-3">Player</div>
+        <div class=" rounded bg-warning player2 d-inline p-1">Computer</div>
         <button id="button" class=" d-block btn btn-primary m-3" >gioca</button>
         <div class="result1 text-light m-3"></div>
         <div class="result2 text-light m-3"></div>
         <div class="result3 text-light m-3"></div>
+        <button id="retry" class=" d-block btn btn-primary m-3">ritenta</button>
     </div>
 
 
