--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-    <div class="bg-success m-3 p-3">
-        <div class=" rounded bg-warning player1 d-inline p-1 m-3">Player</div>
-        <div class=" rounded bg-warning player2 d-inline p-1">Computer</div>
+    <!--  -->
+    <!-- gioco dei dadi  -->
+    <!--  -->
+    <div class="bg-success m-3 p-3 text-light rounded">
+        <h2>Gioco dei dadi</h2>
+        <div class=" text-dark rounded bg-warning player1 d-inline p-1 m-3">Player</div>
+        <div class=" text-dark rounded bg-warning player2 d-inline p-1">Computer</div>
         <button id="button" class=" d-block btn btn-primary m-3" >gioca</button>
         <div class="result1 text-light m-3"></div>
         <div class="result2 text-light m-3"></div>
@@ -25,10 +29,41 @@
     </div>
 
 
+
+
+
+    <!--  -->
+    <!-- richiesta mail  -->
+    <!--  -->
+    <div class="bg-success m-3 p-3 text-light rounded">
+        <h2>mail richiesta</h2>
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Inserisci la tua mail</label>
+            <input type="email" class="form-control" id="mailControl" placeholder="La mail giusta è: luca@gmail.com">
+            <button class="btn btn-primary m-3" id="mailcheck">Invia</button>
+            <div class="risposta"></div>
+        </div>       
+    </div>
+
+
+
+
+
+
+
+
+
+
+   
+   
+   
+   
+   
+   
+   
     <!-- link javascript di bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-    <!-- link javascript -->
+     <!-- link javascript -->
     <script src="./assets/main.js"></script>
 </body>
 </html>
